<resources>
    <string name="app_name">PortofoliApp</string>
    <string name="introduce">Helo, Selamat datang\nSaya Software enginer</string>
    <string name="myphoto">myphoto</string>
    <string name="img_profile">img_profile</string>
    <string name="img_hardskill">img_hardskill</string>
    <string name="img_projects">img_projects</string>
    <string name="img_contact">img_contact</string>
    <string name="ic_disclaimer">ic_disclaimer</string>
    <string name="disclaimer">Applikasi ini hanya untuk tugas portofolio saya\nTugas portofolio PWTS X RPL 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_text">Saya adalah siswa SMK Plus Pelita Nusantara kelas 10 RPL 2 yang sedang menempuh pendidikan di bidang Rekayasa Perangkat Lunak. Memiliki ketertarikan dalam dunia teknologi, terutama dalam pengembangan perangkat lunak dan pemrograman.</string>
    <string name="skill_text">Saya sedang mempelajari Pengembangan Aplikasi Android dengan menggunakan java di Android Studio dan sebelumnya Saya pernah mempelajari Pengembangan Game menggunakan Blueprint di Unreal Engine 5 dan mempelajari sedikit animasi 3D.</string>
    <string name="project_text">Tidak memiliki project</string>
    <string name="contact_text">Hubungi kontak saya jika perlu\nNo telephone : 089530738150\nGithub : ReyhanR\nFacebook : ReyhanR09\nX : ReyhanR09</string>
</resources>