<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="?attr/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/introduce"
        android:textColor="?attr/titleTextColor"
        android:textStyle="bold"
        android:textSize="27sp"
        android:letterSpacing=".04"
        android:lineSpacingExtra="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:contentDescription="@string/myphoto"
        android:src="@drawable/myphoto"
        android:layout_width="335dp"
        android:layout_height="320dp" />

    <HorizontalScrollView
        android:scrollbars="none"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="130dp">

            <ImageButton
                android:contentDescription="@string/img_profile"
                android:background="@drawable/img_profile"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_width="200dp"
                android:layout_height="130dp" />

            <ImageButton
                android:contentDescription="@string/img_hardskill"
                android:background="@drawable/img_hardskill"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="200dp"
                android:layout_height="130dp"/>

            <ImageButton
                android:contentDescription="@string/img_projects"
                android:background="@drawable/img_project"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="200dp"
                android:layout_height="130dp"/>

            <ImageButton
                android:contentDescription="@string/img_contact"
                android:background="@drawable/img_contact"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_width="200dp"
                android:layout_height="130dp"/>

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/ic_disclaimer"
            android:src="@drawable/ic_warning_amber"
            tools:ignore="ImageContrastCheck"/>

        <TextView
            android:textColor="?attr/titleTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

</LinearLayout>